Fix broken outlines in dark mode This was only affecting ListItem, which isn't using an outline anymore. So, the issue doesn't currently affect us, but it was VERY confusing.

--- a/frontend/viewer/src/app.css
+++ b/frontend/viewer/src/app.css
@@ -36,6 +36,8 @@
   /* shadcn generated styles */
   * {
     @apply border-border outline-ring/50;
+    /* EDIT: Fixes dark mode gets "outline-style: none" which results in white (browser bug?) */
+    @apply focus-visible:outline-solid;
   }
   .app {
     @apply bg-background text-foreground;
